--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
     "preview": "vite preview",
     "electron": "electron ."
   },
-  "keywords": ["electron", "vite", "react", "antd"],
+  "keywords": [
+    "electron",
+    "vite",
+    "react",
+    "antd"
+  ],
   "author": "Dmitry Osin <d@osin.pro>",
   "license": "MIT",
   "repository": {
@@ -25,17 +30,17 @@
     "cross-env": "^7.0.3",
     "electron": "^28.0.0",
     "electron-builder": "^24.9.1",
-    "vite": "^5.0.8",
+    "vite": "^7.1.1",
     "vite-plugin-electron": "^0.15.5",
     "vite-plugin-electron-renderer": "^0.14.5",
     "wait-on": "^7.2.0"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.2.6",
+    "antd": "^5.12.8",
+    "electron-settings": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "antd": "^5.12.8",
-    "@ant-design/icons": "^5.2.6",
-    "styled-components": "^6.1.6",
-    "electron-settings": "^4.0.2"
+    "styled-components": "^6.1.6"
   }
-} 
+}
