[~] update build actions

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,6 +38,6 @@ jobs:
         uses: softprops/action-gh-release@v1
         with:
           tag_name: ${{ env.VERSION }}
-          files: dist/*.exe
+          files: dist-electron/*.exe
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }} 
